--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="plugins/angular/angular-resource.js"></script>
         <script type="text/javascript" src="plugins/ui-router/release/angular-ui-router.js"></script>
         <script type="text/javascript" src="plugins/ng-cordova/dist/ng-cordova.js"></script>
-        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="plugins/jquery-1.11.3.min.js"></script>
 
 
         <!-- APP -->
