--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -16,17 +16,19 @@
 
 
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
-                    <div class="col-xs-10">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">Controle de Combustível</a>
+                    <div class="col-xs-12">
+                        <div class="col-xs-8">
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="#">Controle de Combustível</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-xs-2">
-                        <div class="nav navbar-nav navbar-right">
-                            <!-- <li><a  class="btn btn-success">Link</a></li> -->
-                            <a ui-sref="adicionaGasto" class="btn-custom"><i class="fa fa-plus"></i></a>
+                        <div class="col-xs-2">
+                            <div >
+                                <!-- <li><a  class="btn btn-success">Link</a></li> -->
+                                <a ui-sref="adicionaGasto" class="btn-custom"><i class="fa fa-plus"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
